[package]
name = "bing-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
simplelog = { version = "0.12.1", features = ["paris"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
async-tungstenite = { version = "0.20.0", features = [
    "tokio-runtime",
    "tokio-native-tls",
    "tokio-rustls-webpki-roots",
] }
futures = "0.3.27"
uuid = { version = "1.3.0", features = ["v4"] }
egui = "0.21.0"
eframe = "0.21.3"
